<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="tfEmail">Email</string>
    <string name="tfPassword">Password</string>
    <string name="btnLogin">LOG IN</string>
    <string name="btnRegister">REGISTER</string>
    <string name="tfName">Name</string>
    <string name="tfRepeatPassword">Repeate password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pratos_principais">Pratos principais</string>
</resources>